...
    }()

    lazy var searchButton: UIButton = {
        let button = UIButton(type: .system)

        button.translatesAutoresizingMaskIntoConstraints = false
        button.accessibilityLabel = "Search"
        button.setTitle(L10n.EmptyView.search, for: .normal)
        button.titleLabel?.font = .preferredFont(forTextStyle: .body)
        button.accessibilityIdentifier = "searchButton"

        return button
    }()
...
