...
    lazy var shareButton: UIButton = {
        let button = UIButton(type: .system)

        button.translatesAutoresizingMaskIntoConstraints = false
        button.accessibilityLabel = "Share"
        button.setImage(UIImage(systemName: "square.and.arrow.up"), for: .normal)
        button.accessibilityIdentifier = "shareFactButton"

        return button
    }()

    private func setupView() {
        clipsToBounds = false
...
